search-in-workspace: correct scrollbar display

--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -15,7 +15,7 @@
  ********************************************************************************/
 
  #search-in-workspace {
-    height: 100%;
+    height: auto;
 }
 
 .t-siw-search-container {
